--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </div>
                  <div class="five columns">
                     
-                     <form action="https://www.getdrip.com/forms/73344361/submissions" method="post" data-drip-embedded-form="73344361" class="index-transition-tablet-up">
+                     <form action="https://tinyletter.com/Pinely" method="post" class="index-transition-tablet-up">
                      <input class="u-full-width newsletter_email" type="email" placeholder="Enter Email">
                      <input type="submit" value="Submit" class="newsletter_submit"/>  
                      </form>
